sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:12: error: ';' expected but integer literal found.
        case ROUGE => if(getCouleur(lgr-rouge-1)!=ROUGE){echange(i,lgr-rouge-1);} rouge += 1;
                                                                                           ^